create 2 zips with an Ant task, one for FreeTTS, another for TalkingJava, so developers can choose the JSAPI implementation they want.