@@ -1,4 +1,4 @@
-Fingon beta README
+Fingon 1.0 with FreeTTS readme
 
 ------------------------------------------------------------------------------
  Content
@@ -20,7 +20,7 @@ It adds some assistive features to the user interface for the visually impaired 
 * button: says the label or emits a sound once the button is actioned.
 * toggle button / radio button / checkbox: emits a different sound when the button is selected or unselected.
 * menu item: says the label of the menu item when the mouse hovers it. Plays a sound if actioned.
-* combobox: says the item hovered in the list, emits a sound when the button popping up the list is actioned, says the item selected or typed.
+* combobox: emits a sound when the button popping up the list is actioned, says the item hovered in the list, says the item selected or text typed if the combobox is editable.
 * list: says the label of the selected item.
 * tree: says the label of the selected node. Emits a different sound when a node is expanded or collapsed. Says a node was added or removed from a parent node.
 * progress bar: plays a music when a progress bar is running in indeterminate state. Otherwise plays a sound each time the bar progresses, and a particular sound when the progression ends. If a string is displayed or updated in the progress bar, says it.
@@ -32,12 +32,18 @@ It adds some assistive features to the user interface for the visually impaired 
 * table: says the label of the selected cell, or the first cell of the selected row. Warns the user that a column has been moved, added or removed from the table.
 * spinner: says the typed or selected value in the spinner.
 * scroll bar: emits a series of sounds when the bar is dragged. Their pitch is proportional to the position in the progress bar: sounds emited to the left/top of the progress bar are low, the ones emited to the right/bottom of the progress bar are high.
+* internal frame: says the title of the internal frame when activated, plays a sound when iconified, deiconified, opened and closed.
+
+Fingon is delivered with FreeTTS, a JSAPI implementation entirely written in Java by Sun microsystem.
+It is an open source project providing one low quality voice in the US language.
 
 ------------------------------------------------------------------------------
  System requirements
 ------------------------------------------------------------------------------
 
 Fingon requires a Java Runtime Environment (JRE) 1.6.
+The JSAPI implementation provided in this package (FreeTTS) runs on any platform.
+It doesn't work with the Substance look and feel.
 
 ------------------------------------------------------------------------------
  Installation
@@ -47,7 +53,7 @@ add the following line in your code before instantiating any Swing component:
 
 	UIManager.addAuxiliaryLookAndFeel(new FingonLookAndFeel());
 
-add the following jar files in your classpath:
+add the following jar files to your classpath:
 	
 	The auxiliary look and feel itself:
 	 - fingon.jar
@@ -78,28 +84,18 @@ copy soundbank.gm either in the home directory of your application, or in <JRE_H
  Alternate JSAPI implementations
 ------------------------------------------------------------------------------
 
-Fingon is delivered with FreeTTS, a JSAPI implementation entirely written in Java.
-It is an open source project providing one low quality voice in the US language.
-
 If you are no satisfied with FreeTTS, you can use an alternate implementation. 
 TalkingJava from CloudGarden (http://www.cloudgarden.com/JSAPI/index.html) 
-is an implementation providing a bridge between JSAPI and the Speech API (SAPI) of Microsoft.
+is an implementation providing a bridge between JSAPI and the Microsoft Speech API (SAPI).
 It allows you to use any SAPI 4 or 5 synthesizers in your Java program. 
-As a consequence, it will only work under Windows.
 This is a proprietary product, free for non-commercial use only.
 
-To switch to TalkingJava, follow these steps:
-
-	- remove all FreeTTS jars from your classpath
-	- add fingon-talkingjava-synthesizer.jar in your classpath
-	- download TalkingJava zip file from http://cloudgarden1.com/TalkingJavaSDK-170.zip
-	- extract and add cgjsapi170.dll in the library path of your application (ex: lib\windows\x86\)
-	- extract and add cgjsapi.jar in the extension path of your application (ex: lib\ext\)
-	- start your application with the following VM arguments:
-		java -cp lib\fingon.jar;... -Djava.ext.dirs=lib\ext -Djava.library.path=lib\windows\x86 mypackage.MyMainClass 
-
-Others JSAPI implementations exist but they have not been tested with Fingon.
-A classic JSAPI installation requires to copy speech.properties in the user's home directory (ex: C:\Documents and Settings\Paul-Emile)
+Usually a classic JSAPI installation requires to copy the file speech.properties 
+in the user's home directory (ex: C:\Documents and Settings\Paul-Emile)
 
 
-For more information, see the wiki at http://sourceforge.net/apps/mediawiki/fingon/index.php?title=Main_Page
+For more information, customization and enhanced usage, see the wiki at 
+http://sourceforge.net/apps/mediawiki/fingon/index.php?title=Main_Page
+
+Paul-Emile Veuve
+peveuve@gmail.com
